--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -11,6 +11,8 @@
 
         <import type="android.graphics.Color" />
 
+        <import type="android.view.View" />
+
     </data>
 
     <FrameLayout
@@ -96,19 +98,19 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                android:elevation="2dp"
                 app:cardCornerRadius="@dimen/panel_corner_radius"
                 app:layout_constraintBottom_toTopOf="@+id/tabs_drawing_templates"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/guide_draw_drawview_left"
-                app:layout_constraintTop_toTopOf="parent"
-                android:elevation="2dp">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.divyanshu.draw.widget.DrawView
                     android:id="@+id/drawView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:focusableInTouchMode="true"
-                    android:elevation="0dp"/>
+                    android:elevation="0dp"
+                    android:focusableInTouchMode="true" />
 
             </androidx.cardview.widget.CardView>
 
@@ -174,17 +176,67 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_begin="510dp" />
 
-            <include
-                android:id="@+id/container_size_brushes"
-                layout="@layout/panel_brush_sizes"
-                android:layout_width="110dp"
-                android:layout_height="0dp"
-                android:elevation="24dp"
-                android:visibility="@{safeUnbox(drawViewModel.visibilityTextTools)}"
+            <androidx.cardview.widget.CardView
+                android:layout_width="100dp"
+                android:layout_height="300dp"
+                android:layout_marginStart="8dp"
+                android:visibility="@{drawViewModel.showColorPicker? View.VISIBLE : View.GONE}"
+                app:cardCornerRadius="@dimen/panel_corner_radius"
+                app:layout_constraintBottom_toBottomOf="@+id/container_draw_colors"
+                app:layout_constraintStart_toEndOf="@+id/container_draw_colors">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusable="true"
+                    android:orientation="vertical">
+
+                    <Space
+                        android:layout_width="100dp"
+                        android:layout_height="15dp" />
+
+                    <ImageView
+                        android:id="@+id/btn_draw_customColor"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/ic_color_no_border"
+                        android:tint="@{drawViewModel.customColor}" />
+
+                    <Space
+                        android:layout_width="100dp"
+                        android:layout_height="30dp" />
+
+                    <com.skydoves.colorpickerview.ColorPickerView
+                        android:id="@+id/colorPickerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="210dp"
+                        app:palette="@drawable/colorpicker"
+                        app:selector="@drawable/wheel" />
+
+                    <Space
+                        android:layout_width="100dp"
+                        android:layout_height="15dp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:visibility="@{drawViewModel.showColorWidthTools? View.VISIBLE : View.GONE}"
+                app:cardCornerRadius="@dimen/panel_corner_radius"
                 app:layout_constraintBottom_toBottomOf="@+id/container_draw_utilities"
-                app:layout_constraintStart_toEndOf="@+id/container_draw_utilities"
-                app:layout_constraintTop_toTopOf="@+id/container_draw_utilities"
-                bind:drawViewModel="@{drawViewModel}" />
+                app:layout_constraintStart_toEndOf="@+id/container_draw_utilities">
+
+                <include
+                    android:id="@+id/container_size_brushes"
+                    layout="@layout/panel_brush_sizes"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    bind:drawViewModel="@{drawViewModel}" />
+            </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
