--- a/app/src/main/res/layout/panel_drawing_tools.xml
+++ b/app/src/main/res/layout/panel_drawing_tools.xml
@@ -32,36 +32,36 @@
             <ImageView
                 android:id="@+id/btn_pencil"
                 android:layout_width="match_parent"
-                android:padding="16dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:onClick="@{()->drawViewModel.onPencilClicked()}"
-                android:src="@drawable/ic_brush_thinline"
+                android:padding="16dp"
+                android:src="@drawable/ic_brush"
                 android:tint="@{drawViewModel.selectedTool==Tool.PENCIL ? drawViewModel.selectedColor : Color.BLACK}" />
 
 
             <ImageView
                 android:id="@+id/btn_text"
                 android:layout_width="match_parent"
-                android:padding="16dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:onClick="@{()->drawViewModel.onTextClicked()}"
+                android:padding="16dp"
                 android:src="@drawable/ic_tekst"
-                android:tint="@{drawViewModel.selectedTool==Tool.TEXT ? drawViewModel.selectedColor : Color.BLACK}"  />
+                android:tint="@{drawViewModel.selectedTool==Tool.TEXT ? drawViewModel.selectedColor : Color.BLACK}" />
 
             <ImageView
                 android:id="@+id/btn_eraser"
                 android:layout_width="match_parent"
-                android:padding="16dp"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:onClick="@{()->drawViewModel.onEraserClicked()}"
+                android:padding="16dp"
                 android:src="@drawable/ic_gom"
-                android:tint="@{drawViewModel.selectedTool==Tool.ERASER ? drawViewModel.selectedColor : Color.BLACK}"  />
+                android:tint="@{drawViewModel.selectedTool==Tool.ERASER ? drawViewModel.selectedColor : Color.BLACK}" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
