--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="arrow_height">109dp</dimen>
     <dimen name="arrow_width">210dp</dimen>
     <dimen name="panel_corner_radius">20dp</dimen>
+    <dimen name="panel_corner_elevation">5dp</dimen>
     <dimen name="font_size_enter_text">50sp</dimen>
     <dimen name="event_textInput_height">75dp</dimen>
     <dimen name="textIcon_fontsize_small">25sp</dimen>
