--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -101,7 +101,7 @@
                 android:elevation="2dp"
                 app:cardCornerRadius="@dimen/panel_corner_radius"
                 app:layout_constraintBottom_toTopOf="@+id/tabs_drawing_templates"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_makeDrawing_save"
                 app:layout_constraintStart_toEndOf="@+id/guide_draw_drawview_left"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -121,6 +121,47 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.1" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardview_draw_undo_redo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-5dp"
+                android:layout_marginEnd="50dp"
+                app:cardCornerRadius="@dimen/panel_corner_radius"
+                app:cardElevation="@dimen/panel_corner_elevation"
+                app:layout_constraintEnd_toEndOf="@+id/cardView"
+                app:layout_constraintTop_toTopOf="@+id/cardView">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btn_draw_undo"
+                        android:layout_width="32dp"
+                        android:layout_height="23dp"
+                        android:layout_margin="16dp"
+                        android:background="@drawable/ic_undo"
+                        android:contentDescription="@string/undo"
+                        android:onClick="@{()->drawViewModel.undo()}" />
+
+                    <View
+                        android:layout_width="1dip"
+                        android:layout_height="fill_parent"
+                        android:background="@color/black" />
+
+                    <ImageButton
+                        android:id="@+id/btn_draw_redo"
+                        android:layout_width="32dp"
+                        android:layout_height="23dp"
+                        android:layout_margin="16dp"
+                        android:background="@drawable/ic_redo"
+                        android:contentDescription="@string/redo"
+                        android:onClick="@{()->drawViewModel.redo()}" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabs_drawing_templates"
@@ -177,11 +218,13 @@
                 app:layout_constraintGuide_begin="510dp" />
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/draw_customColorPicker"
                 android:layout_width="100dp"
                 android:layout_height="300dp"
                 android:layout_marginStart="8dp"
                 android:visibility="@{drawViewModel.showColorPicker? View.VISIBLE : View.GONE}"
                 app:cardCornerRadius="@dimen/panel_corner_radius"
+                app:cardElevation="@dimen/panel_corner_elevation"
                 app:layout_constraintBottom_toBottomOf="@+id/container_draw_colors"
                 app:layout_constraintStart_toEndOf="@+id/container_draw_colors">
 
@@ -227,6 +270,7 @@
                 android:layout_marginStart="8dp"
                 android:visibility="@{drawViewModel.showColorWidthTools? View.VISIBLE : View.GONE}"
                 app:cardCornerRadius="@dimen/panel_corner_radius"
+                app:cardElevation="@dimen/panel_corner_elevation"
                 app:layout_constraintBottom_toBottomOf="@+id/container_draw_utilities"
                 app:layout_constraintStart_toEndOf="@+id/container_draw_utilities">
 
