--- a/app/src/main/res/layout/panel_brush_sizes.xml
+++ b/app/src/main/res/layout/panel_brush_sizes.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -17,7 +16,7 @@
 
     <LinearLayout
         android:layout_width="100dp"
-        android:layout_height="200dp"
+        android:layout_height="185dp"
         android:focusable="true"
         android:orientation="vertical">
 
@@ -27,13 +26,13 @@
 
         <ImageView
             android:id="@+id/btn_draw_setThickLineWidth"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.THICK)}"
-            android:tint="@{(((LineWidth)drawViewModel.selectedLineWidth)==LineWidth.THICK)  ? drawViewModel.selectedColor : Color.BLACK}"
-            android:src="@drawable/ic_color_no_border" />
+            android:src="@drawable/ic_color_no_border"
+            android:tint="@{(((LineWidth)drawViewModel.selectedLineWidth)==LineWidth.THICK)  ? drawViewModel.selectedColor : Color.BLACK}" />
 
         <Space
             android:layout_width="100dp"
@@ -41,14 +40,13 @@
 
         <ImageView
             android:id="@+id/btn_draw_setMediumLineWidth"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.MEDIUM)}"
-            android:tint="@{(((LineWidth)drawViewModel.selectedLineWidth)==LineWidth.MEDIUM) ? drawViewModel.selectedColor : Color.BLACK}"
             android:src="@drawable/ic_color_no_border"
- />
+            android:tint="@{(((LineWidth)drawViewModel.selectedLineWidth)==LineWidth.MEDIUM) ? drawViewModel.selectedColor : Color.BLACK}" />
 
         <Space
             android:layout_width="100dp"
@@ -61,9 +59,8 @@
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:onClick="@{() -> drawViewModel.setLineWidth(LineWidth.THIN)}"
-            android:tint="@{((LineWidth)drawViewModel.selectedLineWidth)==LineWidth.THIN ? drawViewModel.selectedColor : Color.BLACK}"
             android:src="@drawable/ic_color_no_border"
-        />
+            android:tint="@{((LineWidth)drawViewModel.selectedLineWidth)==LineWidth.THIN ? drawViewModel.selectedColor : Color.BLACK}" />
 
         <Space
             android:layout_width="100dp"
