FAITH-274 : nieuwe layout avatar screen - skincolor toegevoegd - oude avatar beelden verwijderd - linting

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,6 +35,10 @@
     <color name="yellow">#FFFF00</color>
 
     <color name="caption">#0000FF</color>
+
+    <color name="skin_blank">#FFC18E</color>
+    <color name="skin_lightbrown">#D39751</color>
+    <color name="skin_darkbrown">#9C6231</color>
 </resources>
 
 
