--- a/app/src/main/res/layout/avatar_rv_item.xml
+++ b/app/src/main/res/layout/avatar_rv_item.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/avatar_list_image_card"
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardElevation="0dp"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="@dimen/panel_corner_radius"
-        >
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/avatar_list_image_card"
+    android:layout_width="265dp"
+    android:layout_height="match_parent"
+    android:layout_marginEnd="8dp"
+    app:cardBackgroundColor="@android:color/transparent"
+    app:cardCornerRadius="@dimen/panel_corner_radius"
+    app:cardElevation="0dp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.5"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
     <ImageView
         android:id="@+id/avatar_list_image"
         android:layout_width="match_parent"
@@ -22,23 +23,7 @@
         android:background="@drawable/item_background"
         android:contentDescription="@string/description_thumbnail"
         android:scaleType="fitCenter"
-        tools:srcCompat="@drawable/jongen_gamer"  />
-    </androidx.cardview.widget.CardView>
-
-    <!--ImageView
-        android:id="@+id/btn_selected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/choose_blue"
-        android:padding="5dp"
-        android:scaleType="center"
-        android:src="@drawable/ic_arrow_selected"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/avatar_list_image_card"/> -->
+        tools:srcCompat="@drawable/jongen_gamer_bl" />
+</androidx.cardview.widget.CardView>
 
 
