--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -43,7 +43,8 @@
                 app:layout_constraintHeight_percent="0.50"
                 app:layout_constraintStart_toStartOf="@+id/guide_center_pole"
                 app:layout_constraintTop_toBottomOf="@+id/guide_top_pole"
-                app:srcCompat="@drawable/wegwijzerpaal" />
+                app:srcCompat="@drawable/wegwijzerpaal"
+                android:contentDescription="@string/wegwijzerpaal"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_center_pole"
@@ -85,7 +86,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_event_details_drawing"
                 style="@style/arrow_style"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:contentDescription="@string/description_addDrawing"
                 android:onClick="@{() -> eventViewModel.onDrawingButtonClicked()}"
                 android:text="@string/description_addDrawing"
@@ -147,7 +148,8 @@
                 android:minWidth="24dp"
                 android:onClick="@{() -> eventViewModel.onSendButtonClicked()}"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/save"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_avatar_titel_bottom"
@@ -185,7 +187,7 @@
                 app:layout_constraintStart_toStartOf="@+id/guide_recyclerview_start"
                 app:layout_constraintTop_toTopOf="@+id/guide_avatar_top"
                 app:layout_constraintVertical_bias="1.0"
-                app:srcCompat="@drawable/meisje_stoer_bank" />
+                app:srcCompat="@drawable/meisje_stoer_bl_bank" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_avatar_inkleuren_left"
