add seekbar to UI

--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -44,6 +44,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <!-- https://medium.com/androiddevelopers/building-a-simple-audio-app-in-android-part-3-3-ead4a0e10673 -->
+            <SeekBar
+                android:id="@+id/seekBar_audio_progress"
+                android:layout_width="1000dp"
+                android:layout_height="20dp"
+                app:layout_constraintBottom_toTopOf="@+id/cardView_audio_center"
+                app:layout_constraintEnd_toEndOf="@+id/cardView_audio_center"
+                app:layout_constraintStart_toStartOf="@+id/cardView_audio_center"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView_audio_center"
                 android:layout_width="wrap_content"
