--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -43,8 +43,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/ic_return"
-                android:onClick="@{() -> drawViewModel.onCancelClicked()}"
                 android:contentDescription="@string/cancel"
+                android:onClick="@{() -> drawViewModel.onCancelClicked()}"
                 app:layout_constraintBottom_toTopOf="@+id/container_draw_colors"
                 app:layout_constraintEnd_toStartOf="@+id/guide_draw_drawview_left"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,6 +84,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/save_btn"
+                android:contentDescription="@string/save"
                 android:elevation="2dp"
                 android:onClick="@{() -> drawViewModel.onSaveClicked()}"
                 android:translationZ="2dp"
@@ -216,53 +217,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_begin="510dp" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/draw_customColorPicker"
-                android:layout_width="100dp"
-                android:layout_height="300dp"
-                android:layout_marginStart="8dp"
-                android:visibility="@{drawViewModel.showColorPicker? View.VISIBLE : View.GONE}"
-                app:cardCornerRadius="@dimen/panel_corner_radius"
-                app:cardElevation="@dimen/panel_corner_elevation"
-                app:layout_constraintBottom_toBottomOf="@+id/container_draw_colors"
-                app:layout_constraintStart_toEndOf="@+id/container_draw_colors">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:focusable="true"
-                    android:orientation="vertical">
-
-                    <Space
-                        android:layout_width="100dp"
-                        android:layout_height="15dp" />
-
-                    <ImageView
-                        android:id="@+id/btn_draw_customColor"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/ic_color_no_border"
-                        android:tint="@{drawViewModel.customColor}" />
-
-                    <Space
-                        android:layout_width="100dp"
-                        android:layout_height="30dp" />
-
-                    <com.skydoves.colorpickerview.ColorPickerView
-                        android:id="@+id/colorPickerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="210dp"
-                        app:palette="@drawable/colorpicker"
-                        app:selector="@drawable/wheel" />
-
-                    <Space
-                        android:layout_width="100dp"
-                        android:layout_height="15dp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
